Fix classic-hero class name

--- a/examples/myHero.pug
+++ b/examples/myHero.pug
@@ -1,5 +1,4 @@
 extends ../pug/classic.pug
 
 block heroConfig
-  - config.copy.labels = ['Llevamos tu negocio', 'más lejos'];
-  - config.copy.isBold = [ false, true ];
+  - config.copy.labels = ['Escribe aquí el slogan', 'de tu marca y sus beneficios'];
