--- a/pug/classic.pug
+++ b/pug/classic.pug
@@ -4,7 +4,7 @@
 -config.copy = {}
 
 //- Default Values
-- config.className = 'hero'
+- config.className = 'classic-hero'
 - config.copy.labels = ['Slogan de', 'tu marca'];
 - config.copy.isBold = [ true, false ];
 - config.copy.tags = ['h2','h2'];
