--- a/examples/style.scss
+++ b/examples/style.scss
@@ -13,6 +13,21 @@
 @include classic-hero() {
   background-color: cornflowerblue;
   color: whitesmoke;
+
+  &__title {
+    @include animate(fadeInUp) {
+      opacity: 0;
+      animation-duration: 0.7s;
+    }
+
+    &:first-child {
+      animation-delay: 0.5s;
+    }
+
+    &:nth-child(2) {
+      animation-delay: 1s;
+    }
+
+  }
+
 }
-
-
