--- a/pug/classic.pug
+++ b/pug/classic.pug
@@ -1,24 +1,17 @@
 -config = {}
--config.copy = {}
 
 //- Default Values
 - config.className = 'classicHero'
-- config.copy.labels = ['Slogan de', 'tu marca'];
-- config.copy.isBold = [ true, false ];
-- config.copy.tags = ['h1','h2'];
+- config.copy = true
+- config.cta = true
 
 block heroConfig
 
-- var idx = 0;
-
 div(class=config.className)
   div(class=config.className + "__container")
-    div(class=config.className + "__copy")
-      each line in config.copy.labels
-        - var classes = config.className + "__title";
-        if config.copy.isBold[idx]
-          #{config.copy.tags[idx]}(class=classes)
-            b= config.copy.labels[idx]
-        else
-          #{config.copy.tags[idx]}(class=classes)= config.copy.labels[idx]
-        - idx++
+    if config.copy
+      div(class=config.className + "__copy")
+        block copy
+    if config.cta
+      div(class=config.className + "__cta")
+        block callToAction
