--- a/pug/basic.pug
+++ b/pug/basic.pug
@@ -1,17 +1,13 @@
 -config = {}
 
 //- Default Values
-- config.className = 'classicHero'
+- config.className = 'basicHero'
 - config.copy = true
-- config.cta = true
 
-block heroConfig
+block config
 
 div(class=config.className)
   div(class=config.className + "__container")
     if config.copy
       div(class=config.className + "__copy")
         block copy
-    if config.cta
-      div(class=config.className + "__cta")
-        block cta
