--- a/pug/basic.pug
+++ b/pug/basic.pug
@@ -2,12 +2,10 @@
 
 //- Default Values
 - config.className = 'basicHero'
-- config.copy = true
+- config.content = true
 
 block config
 
 div(class=config.className)
   div(class=config.className + "__container")
-    if config.copy
-      div(class=config.className + "__copy")
-        block copy
+    block content
