twofold hero type a

--- a/examples/myHero.pug
+++ b/examples/myHero.pug
@@ -1,7 +1,10 @@
-extends ../pug/basic.pug
+extends ../pug/twofold.pug
 
 block config
   - config.className = 'hero'
 
-block content
-  h2 Escríbe aquí tu título :D
+block right
+  h2 Right
+
+block left
+  h2 left
