--- a/examples/style.scss
+++ b/examples/style.scss
@@ -1,13 +1,34 @@
 @import '~@codeinc.mx/page-template-component/scss/pageTemplate.scss';
 
-@import '../scss/basic.scss';
+@import '../scss/hero.scss';
 
-@include basic-hero('hero') {
+@include hero(twofold, 'hero', (symmetric: false)) {
   background-color: lightseagreen;
   color: white;
 
-  h2{
-    margin-top: 30vh;
-    @include col-full();
+  &__left {
+    border: 2px solid red;
+
+    @include col-map((
+      starts-in: 1,
+      xs: 1,
+      sm: 1,
+      md: 3,
+      lg: 5,
+      xl: 5
+    ));
+  }
+
+  &__right {
+    border: 2px solid blue;
+
+    @include col-map((
+      starts-in: 3,
+      xs: 3,
+      sm: 3,
+      md: 5,
+      lg: 7,
+      xl: 7
+    ));
   }
 }
